[package]
name = "movie-recom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
csv = "1.3.0"
nalgebra = {version = "0.32.3" , features = ["cuda"]}
serde = { version = "1.0.195", features = ["derive"] }
